wp-content/themes/ecosystem-energy/assets/styles/partials/_industry-featured.scss
.industry-featured {
  padding: 100px 0;
  background-color: $lightgrey;

  h2 {
    max-width: 80%;
    margin: 0 auto 70px;
    @include fontSize(32, 44);
    text-align: center;
  }

  .featured-list {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    gap: 40px;

    .featured-block {
      position: relative;
      background-color: white;
      text-align: center;

      // Blue sliding background
      &::after {
        content: '';
        position: absolute;
        bottom: 0;
        left: 0;
        width: 100%;
        height: 0;
        background-color: $blue;
        transition: $basicTransition;
      }

      h3 { @include fontSize(22, 30, 600); }

      img { 
        margin-top: 40px; 
        height: 200px;
      }

      // White text content shown on hover
      .hover-ctn {
        position: absolute;
        @include flex();
        top: 0;
        width: 100%;
        height: 100%;
        clip-path: polygon(0% 100%, 0% 100%, 100% 100%, 100% 100%);
        z-index: 1;
        transition: $basicTransition;
        
        p { 
          margin: auto 40px;
          text-align: left;
          color: white; 
        }
      }
    
      &:hover {
        &::after { height: 100%; }
        .hover-ctn { clip-path: polygon(0% 100%, 0% 0%, 100% 0%, 100% 100%); }
      }
    }
  }

  @media (max-width: $tablet) {
    .featured-list { grid-template-columns: 1fr; }
  }
}

